initial jekyll setup

--- a/scss/iamucla-sso.scss
+++ b/scss/iamucla-sso.scss
@@ -1,3 +1,14 @@
+// general layout gems
 @import "singularitygs";
 @import "breakpoint";
+
+// normalize components, see https://github.com/ksmandersen/compass-normalize
+@import 'normalize/html5';
+@import 'normalize/base';
+@import 'normalize/links';
+@import 'normalize/typography';
+@import 'normalize/forms';
+
+// custom styles
+@import "vars";
 @import "styles";
