--- a/_includes/ucla-footer.html
+++ b/_includes/ucla-footer.html
@@ -1,4 +1,4 @@
-<footer class="page-footer">
+<footer role="contentinfo">
 	<p><a href="https://shb.ais.ucla.edu/shibboleth-idp/policies.html">Privacy, Security & Legal</a> | Loaded: Mon, 03 Nov 2014 23:00:19 -0800</p>
 </footer>
 
