--- a/_includes/ucla-head.html
+++ b/_includes/ucla-head.html
@@ -1,7 +1,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title></title>
+	<title>UCLA Single Sign On</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/iamucla-sso.css">
 	<script src="js/modernizr.custom.20284.js"></script>
