add in fonts, some structure, etc

--- a/_layouts/medcenter.html
+++ b/_layouts/medcenter.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html class="no-js">
 
-  {% include head.html %}
+  {% include ucla-head.html %}
 
 	<body class="med-center">
 
-		{% include header.html %}
+		{% include ucla-header.html %}
 
 		<section class="content" role="main">
 				{{ content }}
 		</section>
 
-		{% include footer.html %}
+		{% include ucla-footer.html %}
 
 	</body>
 
