--- a/_scss/_ucla-vars.scss
+++ b/_scss/_ucla-vars.scss
@@ -37,5 +37,26 @@ $body-background-color: #fff;
 $base-font-stack: ProximaNova, Verdana, sans-serif;
 
 $anchor-font-color: $uclapurpleneon;
-$anchor-font-color-hover: $ucladarkblue;
+$anchor-font-color-hover: #1e4b87;
 
+/////////////////////////////////////////
+///          FONTS
+/////////////////////////////////////////
+
+@font-face {
+	font-family: '../fonts/ProximaNova';src: url('../fonts/ProximaNova-Light.eot');src: url('../fonts/ProximaNova-Light.eot?#iefix') format('embedded-opentype'),url('../fonts/ProximaNova-Light.woff') format('woff'),url('../fonts/ProximaNova-Light.ttf') format('truetype');
+	font-weight: 300;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: '../fonts/ProximaNova';src: url('../fonts/ProximaNova-Regular.eot');src: url('../fonts/ProximaNova-Regular.eot?#iefix') format('embedded-opentype'),url('../fonts/ProximaNova-Regular.woff') format('woff'),url('../fonts/ProximaNova-Regular.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+font-family: '../fonts/ProximaNova';src: url('../fonts/ProximaNova-Semibold.eot');src: url('../fonts/ProximaNova-Semibold.eot?#iefix') format('embedded-opentype'),url('../fonts/ProximaNova-Semibold.woff') format('woff'),url('../fonts/ProximaNova-Semibold.ttf') format('truetype');
+	font-weight: 600;
+	font-style: normal;
+}
