--- a/_scss/medcenter.scss
+++ b/_scss/medcenter.scss
@@ -1,8 +1,10 @@
 // general layout gems
-@import "singularitygs";
-@import "breakpoint";
+@import 'singularitygs';
+@import 'breakpoint';
+@import 'compass/css3';
 
 // normalize components, see https://github.com/ksmandersen/compass-normalize
+@import 'normalize-version';
 @import 'normalize/html5';
 @import 'normalize/base';
 @import 'normalize/links';
