a bit more common styles

--- a/_includes/ucla-head.html
+++ b/_includes/ucla-head.html
@@ -3,6 +3,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>UCLA Single Sign On</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/iamucla-sso.css">
-	<script src="js/modernizr.custom.20284.js"></script>
+	<link rel="stylesheet" href="/css/ucla-logon.css">
+	<script src="/js/modernizr.custom.20284.js"></script>
 </head>
