--- a/_layouts/ucla-logon.html
+++ b/_layouts/ucla-logon.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html class="no-js">
 
-  {% include ucla-head.html %}
+	{% include ucla-head.html %}
 
-	<body class="ucla-logon">
+	<body>
 
 		{% include ucla-header.html %}
 
