--- a/_includes/ucla-footer.html
+++ b/_includes/ucla-footer.html
@@ -1,5 +1,5 @@
 <footer role="contentinfo">
-	<p><a href="https://shb.ais.ucla.edu/shibboleth-idp/policies.html">Privacy, Security & Legal</a> | Loaded: Mon, 03 Nov 2014 23:00:19 -0800</p>
+	<p><a href="policies.html">Privacy, Security & Legal</a> &nbsp; Loaded: Mon, 03 Nov 2014 23:00:19 -0800</p>
 </footer>
 
 <script src="/js/jquery.min.js"></script>
