--- a/_scss/_ucla-styles.scss
+++ b/_scss/_ucla-styles.scss
@@ -3,10 +3,11 @@
 /////////////////////////////////////////
 
 html {
-	background: #E3E2FA url('/images/background.jpg');
+	background: #d1e8f8 url('/images/background.jpg');
 	box-sizing: border-box;
 	position: relative; 
 	min-height: 100%;
+	width: 100%;
 }
 
 *, *:before, *:after {
@@ -14,9 +15,19 @@ html {
 }
 
 body {
-	max-width: 60em;
+	max-width: 40em;
 	margin: 0 auto;
 	color: $body-text-color;
+	font-family: $font-stack;
+}
+
+h1, h2, h3, h4 {
+	font-weight: normal;
+	color: $uclasafeblue;	
+}
+
+p {
+	line-height: 1.375em;
 }
 
 a {
@@ -40,16 +51,24 @@ a {
 	}
 }
 
-ul[role="main"] {
+section[role="main"] ul {
 	list-style: none;
+	padding-left: 1.5em;
+	li {
+		margin-bottom: .5em;
+	}
 	li:before {
 		color: $uclagreenneon;
 		content: "•";
 		position: relative;
 		font-size: 1.2em;
-		margin-left: -.5em;
+		left: -.25em;
 	}
 }
+
+/////////////////////////////////////////
+///							FORMS
+/////////////////////////////////////////
 
 input {
 	width: 20em;
@@ -61,15 +80,15 @@ input {
 select, input {
 	padding: 0.5em 0.6em;
 	display: inline-block;
-	border: 1px solid #ccc;
+	border: 1px solid $neutral;
 	box-shadow: inset 0 1px 3px #ddd;
-	border-radius: 4px;
+	border-radius: $global-border-radius;
 }
 
 select:focus {
 	outline: 0;
 	outline: thin dotted \9; /* IE6-9 */
-	border-color: #129FEA;
+	border-color: $uclalightblue;
 }
 
 select[disabled] {
@@ -90,23 +109,25 @@ select:focus:invalid:focus {
 }
 
 select {
-	border: 1px solid #ccc;
-	background-color: white;
+	border: 1px solid $neutral;
+	background-color: $white;
 }
 
 fieldset {
 	margin: 0;
-	padding: 0.35em 0 0.75em;
+	padding: 0.5em 0;
 	border: 0;
 }
 
 legend {
 	display: block;
 	width: 100%;
-	padding: 0.3em 0;
-	margin-bottom: 0.3em;
+	padding: 0.25em 0;
+	margin-bottom: 0.5em;
 	color: #333;
 	border-bottom: 1px solid #e5e5e5;
+	font-weight: normal;
+	color: $uclasafeblue;
 	font-size: $h2-font-size;
 }
 
@@ -115,7 +136,7 @@ button {
 	*display: inline; /*IE 6/7*/
 	zoom: 1;
 	line-height: normal;
-	white-space: nowrap;
+	$white-space: nowrap;
 	vertical-align: baseline;
 	text-align: center;
 	cursor: pointer;
@@ -178,8 +199,9 @@ button[disabled] {
 }
 
 button.primary {
-	background-color: $uclablue;
+	background-color: $uclasafeblue;
 	color: #fff;
+	font-size: $h4-font-size;
 }
 
 /////////////////////////////////////////
@@ -188,8 +210,8 @@ button.primary {
 
 header[role="banner"] {
 	img {
-		width: 30%;
-		margin: .5em 0;
+		width: 40%;
+		margin-top: .5em;
 	}
 }
 
@@ -205,13 +227,14 @@ footer[role="contentinfo"] {
 	bottom: 0;
 	height: 2em;
 	width: 100%;
-	max-width: 79em; 
+	max-width: 40em; 
 	background: $ucladarkblue;
-	font-size: $meta-font-size;
+	border-top: 1px solid darken($ucladarkblue, 20%);
 	padding: $half-spacing;
 	color: lighten($body-text-color, 40%);
 	p {
 		margin: 0;
+		font-size: $meta-font-size;
 	}
 	a {
 		text-decoration: none;
@@ -227,6 +250,7 @@ footer[role="contentinfo"] {
 }
 
 #sso {
+	overflow: hidden;
 	label {
 		display: none;
 	}
@@ -237,5 +261,20 @@ footer[role="contentinfo"] {
 		list-style: none;
 		margin: 0;
 		padding-left: 0;
+	}
+}
+
+.sso-submit {
+	@include grid-span(1, 1);
+	padding-top: 0;
+}
+
+.sso-links {
+	@include grid-span(4, 2);
+	@include clearfix;
+	font-size: $meta-font-size;
+	margin: 0;
+	li {
+		margin-bottom: 0;
 	}
 }
