--- a/_scss/ucla-logon.scss
+++ b/_scss/ucla-logon.scss
@@ -2,6 +2,7 @@
 @import 'singularitygs';
 @import 'breakpoint';
 @import 'compass/css3';
+@import 'compass/utilities/general/clearfix';
 
 // normalize components, see https://github.com/ksmandersen/compass-normalize
 @import 'normalize-version';
