--- a/_scss/_ucla-vars.scss
+++ b/_scss/_ucla-vars.scss
@@ -26,10 +26,10 @@ $wide: 1025px;
 
 $uclablue: #3399cc;
 $uclasafeblue: #347bad;
+$uclagold: #ffe800;
 
 // Secondary UCLA Colours
 
-$uclagold: #ffb300;
 $ucladarkblue: #0055a6;
 $uclalightblue: #00a5e5;
 
@@ -76,7 +76,7 @@ $half-spacing: .5em;
 $default-spacing: 1em;
 $double-spacing: 2em;
 
-$global-border-radius: 5px;
+$global-border-radius: 3px;
 
 /////////////////////////////////////////
 ///           FONT FACE
